processor/src/test/resources/tests/InvalidStrategyCombinations/AllowNullsStandalone/AllowNullsStandalone.java
package io.jonasg.bob.test;

import io.jonasg.bob.Buildable;
import io.jonasg.bob.Strategy;

@Buildable(strategy = Strategy.ALLOW_NULLS)
public class AllowNullsStandalone {
}
